--- a/app/src/main/res/layout/activity_registo.xml
+++ b/app/src/main/res/layout/activity_registo.xml
@@ -83,6 +83,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword" />
 
+    <TextView
+        android:id="@+id/btLogin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:clickable="true"
+        android:fontFamily="serif"
+        android:onClick="onClickLogin"
+        android:text="Já tem conta? Faça o login."
+        android:textSize="10sp"
+        app:layout_constraintBottom_toTopOf="@+id/btRegisto"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/btRegisto"
         android:layout_width="wrap_content"
