--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,7 +9,7 @@
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
-        android:text="@string/prompt_email"
+        android:hint="@string/prompt_email"
         android:layout_height="wrap_content"
         android:layout_above="@id/etPassword"
         android:layout_marginHorizontal="20dp"
@@ -21,7 +21,7 @@
         android:id="@+id/etPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/prompt_password"
+        android:hint="@string/prompt_password"
         android:inputType="textPassword"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
