--- a/app/src/main/res/layout/activity_bilhete.xml
+++ b/app/src/main/res/layout/activity_bilhete.xml
@@ -34,27 +34,11 @@
 
 
     <EditText
-        android:id="@+id/etNomeUtilizador"
-        android:layout_width="280dp"
-        android:layout_height="57dp"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="50dp"
-        android:ems="10"
-        android:fontFamily="serif"
-        android:hint="Nome"
-        android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-    <EditText
         android:id="@+id/etHoraDeEntrada"
         android:layout_width="280dp"
         android:layout_height="57dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:fontFamily="serif"
@@ -63,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etNomeUtilizador" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
 
     <EditText
@@ -75,7 +59,7 @@
         android:layout_marginEnd="50dp"
         android:ems="10"
         android:fontFamily="serif"
-        android:hint="Tempo que idealiza ficar???"
+        android:hint="Tempo necessário (minutos)"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
