--- a/app/src/main/res/layout/activity_perfil_user.xml
+++ b/app/src/main/res/layout/activity_perfil_user.xml
@@ -90,6 +90,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="serif"
+        android:onClick="atualizar"
         android:text="ATUALIZAR"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
