--- a/app/src/main/res/layout/activity_registo.xml
+++ b/app/src/main/res/layout/activity_registo.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
-        android:text="Criar Conta"
+        android:text="Criação de Conta"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -109,5 +109,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etContacto" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:srcCompat="@drawable/logocarpark" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
