--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,8 +27,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
-        android:onClick="onClickPassword"
-        />
+        android:onClick="onClickPassword" />
 
     <TextView
         android:id="@+id/tvLogin"
