--- a/app/src/main/res/layout/activity_detalhes_bilhete.xml
+++ b/app/src/main/res/layout/activity_detalhes_bilhete.xml
@@ -36,11 +36,11 @@
         android:id="@+id/textViewNomeUtilizador"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="8dp"
         android:text="Nome:"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaNome"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,7 +56,7 @@
         android:text="Nome do Utilizador"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewNomeUtilizador"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -64,11 +64,11 @@
         android:id="@+id/textViewHoraEntrada"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="8dp"
         android:text="Hora de Entrada:"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaHoraInicio"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +84,7 @@
         android:text="Hora de Entrada"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewHoraEntrada"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaNome" />
 
@@ -92,11 +92,11 @@
         android:id="@+id/textViewTempoIdealizado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="8dp"
         android:text="Tempo Estimado:"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaTempoDesejado"
         app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +112,7 @@
         android:text="Tempo Idealizado"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewTempoIdealizado"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaHoraInicio" />
 
@@ -120,11 +120,11 @@
         android:id="@+id/textViewTotalBilhete"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
+        android:layout_marginEnd="8dp"
         android:text="Preço:"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaTotalaPagar"
         app:layout_constraintHorizontal_bias="0.565"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,7 +140,7 @@
         android:text="Preço do Bilhete"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
-        android:textSize="30sp"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/textViewTotalBilhete"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaTempoDesejado" />
 
@@ -149,6 +149,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:fontFamily="s"
+        android:text="Pagar"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvReservaTotalaPagar"
+        tools:fontFamily="serif" />marginStart="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="s"
