--- a/app/src/main/res/layout/activity_perfil_user.xml
+++ b/app/src/main/res/layout/activity_perfil_user.xml
@@ -158,5 +158,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etPassword2" />
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="70dp"
+        android:layout_height="61dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="4dp"
+        android:onClick="historicoReservas"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/history" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
