--- a/app/src/main/res/layout/activity_bilhete.xml
+++ b/app/src/main/res/layout/activity_bilhete.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="180dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
         android:text="Bilhete"
@@ -25,10 +25,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="166dp"
+        android:layout_marginTop="140dp"
         android:text="Preencha os dados do bilhete"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -37,14 +35,11 @@
         android:layout_width="280dp"
         android:layout_height="50dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="100dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginTop="50dp"
         android:ems="10"
         android:fontFamily="serif"
         android:hint="Tempo necessário (minutos)"
         android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -60,8 +55,18 @@
         android:onClick="MandarDetalhesReserva"
         android:text="Confirmar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTempoQuePensaFicar" />
+
+    <ImageView
+        android:id="@+id/btPerfil"
+        android:layout_width="89dp"
+        android:layout_height="86dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="goToPerfil"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/person"
+        tools:layout_editor_absoluteY="9dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
