--- a/app/src/main/res/layout/recyclerview_item.xml
+++ b/app/src/main/res/layout/recyclerview_item.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/dataView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="41dp"
         android:background="@android:color/holo_orange_light"
         android:textSize="20dp" />
 
@@ -18,15 +18,27 @@
         <TextView
             android:id="@+id/tempoView"
             android:layout_width="180dp"
-            android:layout_height="wrap_content"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:background="@android:color/holo_orange_light"
             android:textSize="20dp" />
 
         <TextView
             android:id="@+id/valorView"
             android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="50dp"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="235dp"
+            android:layout_marginLeft="54dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_toRightOf="@+id/tempoView"
             android:background="@android:color/holo_orange_light"
             android:textSize="20dp" />
