--- a/app/src/main/res/layout/activity_detalhes_bilhete.xml
+++ b/app/src/main/res/layout/activity_detalhes_bilhete.xml
@@ -129,15 +129,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaTotalaPagar"
-        tools:fontFamily="serif" />marginStart="50dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="50dp"
-        android:fontFamily="s"
-        android:text="Pagar"
-        app:layout_constraintBottom_toBottomOf="parent"
+        tools:fontFamily="serif" />
+
+    <ImageView
+        android:id="@+id/imageqr"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="44dp"
+        app:layout_constraintBottom_toTopOf="@+id/btReservaPagar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaTotalaPagar"
-        tools:fontFamily="serif" />
+        app:layout_constraintVertical_bias="0.725"
+        app:srcCompat="@android:mipmap/sym_def_app_icon" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
