--- a/app/src/main/res/layout/activity_detalhes_bilhete.xml
+++ b/app/src/main/res/layout/activity_detalhes_bilhete.xml
@@ -121,26 +121,25 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="10dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
         android:fontFamily="s"
         android:text="Pagar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvReservaTotalaPagar"
+        app:layout_constraintTop_toBottomOf="@+id/imageqr"
         tools:fontFamily="serif" />
 
     <ImageView
         android:id="@+id/imageqr"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginBottom="44dp"
-        app:layout_constraintBottom_toTopOf="@+id/btReservaPagar"
+        android:layout_marginTop="50dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvReservaTotalaPagar"
-        app:layout_constraintVertical_bias="0.725"
         app:srcCompat="@android:mipmap/sym_def_app_icon" />
 
 
