--- a/app/src/main/res/layout/activity_historico_reservas.xml
+++ b/app/src/main/res/layout/activity_historico_reservas.xml
@@ -11,21 +11,18 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="180dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="180dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="96dp"
         android:fontFamily="serif"
         android:text="Histórico de Bilhetes"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerview"
         android:layout_width="414dp"
         android:layout_height="501dp"
-        android:layout_marginTop="20dp"
         android:padding="@dimen/big_padding"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,6 +40,27 @@
         app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:layout_editor_absoluteX="16dp"
         tools:ignore="MissingConstraints" />
+
+    <ImageView
+        android:id="@+id/btPerfil"
+        android:layout_width="74dp"
+        android:layout_height="69dp"
+        android:layout_marginEnd="16dp"
+        android:onClick="goToPerfil"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/person"
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="9dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:contentDescription="Criar bilhete"
+        android:src="@drawable/ic_baseline_add_24"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
