--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,6 +12,7 @@
         android:hint="@string/prompt_email"
         android:layout_height="wrap_content"
         android:layout_above="@id/etPassword"
+        android:text="nunomeira@ipvc.pt"
         android:layout_marginHorizontal="20dp"
         android:layout_marginVertical="10dp"
         android:onClick="onClickEmail"
@@ -22,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="@string/prompt_password"
+        android:text="1234nuno"
         android:inputType="textPassword"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
