--- a/app/src/main/res/layout/activity_perfil_user.xml
+++ b/app/src/main/res/layout/activity_perfil_user.xml
@@ -159,15 +159,15 @@
         app:layout_constraintTop_toBottomOf="@+id/etPassword2" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="70dp"
-        android:layout_height="61dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/imageView6"
+        android:layout_width="101dp"
+        android:layout_height="94dp"
         android:layout_marginEnd="4dp"
-        android:onClick="historicoReservas"
+        android:onClick="goToReview"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/history" />
+        app:srcCompat="@drawable/estrela2"
+        tools:layout_editor_absoluteY="6dp"
+        tools:ignore="MissingConstraints" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
