--- a/app/src/main/res/layout/activity_historico_reservas.xml
+++ b/app/src/main/res/layout/activity_historico_reservas.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="25dp"
-        android:layout_marginEnd="96dp"
+        android:layout_marginEnd="85dp"
         android:fontFamily="serif"
         android:text="Histórico de Bilhetes"
         android:textSize="30sp"
@@ -34,18 +34,19 @@
         android:id="@+id/semBilheteView"
         android:layout_width="373dp"
         android:layout_height="84dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="256dp"
         android:text="NÃO TEM NENHUM BILHETE"
         android:textSize="28sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:layout_editor_absoluteX="16dp"
         tools:ignore="MissingConstraints" />
 
     <ImageView
         android:id="@+id/btPerfil"
         android:layout_width="74dp"
         android:layout_height="69dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="10dp"
         android:onClick="goToPerfil"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/person"
