--- a/app/src/main/res/layout/activity_cartao_multibanco.xml
+++ b/app/src/main/res/layout/activity_cartao_multibanco.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
-        android:text="Catão Multibanco"
+        android:text="Cartão Multibanco"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
