--- a/app/src/main/res/layout/activity_review_parque.xml
+++ b/app/src/main/res/layout/activity_review_parque.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="32dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
-        android:text="Review Parque"
+        android:text="@string/reviewParque"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             android:id="@+id/commentText"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:hint="Comentário" />
+            android:hint="@string/reviewParqueComentario" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -57,7 +57,7 @@
         android:layout_marginTop="60dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="serif"
-        android:text="SUBMETER"
+        android:text="@string/reviewParqueBotaoSubmeter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/commentId" />
