--- a/app/src/main/res/layout/activity_detalhes_bilhete.xml
+++ b/app/src/main/res/layout/activity_detalhes_bilhete.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
-        android:text="Detalhes da Reserva"
+        android:text="@string/reservation_dettails"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +27,7 @@
         android:layout_marginStart="50dp"
         android:layout_marginTop="50dp"
         android:layout_marginEnd="166dp"
-        android:text="Informação sobre o seu bilhete"
+        android:text="@string/info_ticket"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvDetalheReserva" />
@@ -39,7 +39,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="Hora de Entrada:"
+        android:text="@string/hora_entrada"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaHoraInicio"
         app:layout_constraintHorizontal_bias="1.0"
@@ -53,7 +53,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="#000000"
-        android:text="Hora de Entrada"
+        android:text="@string/hora_entrada"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
         android:textSize="16sp"
@@ -67,7 +67,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="Tempo Estimado:"
+        android:text="@string/time_chosen"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaTempoDesejado"
         app:layout_constraintHorizontal_bias="0.666"
@@ -81,7 +81,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="#000000"
-        android:text="Tempo Idealizado"
+        android:text="@string/time_chosen"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
         android:textSize="16sp"
@@ -95,7 +95,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="8dp"
-        android:text="Preço:"
+        android:text="@string/Price"
         android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/tvReservaTotalaPagar"
         app:layout_constraintHorizontal_bias="0.565"
@@ -109,7 +109,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         android:background="#000000"
-        android:text="Preço do Bilhete"
+        android:text="@string/Price"
         android:textColor="#FFFFFF"
         android:textIsSelectable="false"
         android:textSize="16sp"
@@ -125,7 +125,7 @@
         android:layout_marginEnd="50dp"
         android:layout_marginBottom="50dp"
         android:fontFamily="s"
-        android:text="Pagar"
+        android:text="@string/pay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
