--- a/app/src/main/res/layout/activity_bilhete.xml
+++ b/app/src/main/res/layout/activity_bilhete.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="180dp"
         android:fontFamily="serif"
-        android:text="Bilhete"
+        android:text="@string/bilhete_textvview"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="50dp"
         android:layout_marginTop="140dp"
-        android:text="Preencha os dados do bilhete"
+        android:text="@string/bilhete_textview2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
 
@@ -38,7 +38,7 @@
         android:layout_marginTop="40dp"
         android:ems="10"
         android:fontFamily="serif"
-        android:hint="Tempo necessário (minutos)"
+        android:hint="@string/edit_minutos"
         android:inputType="number"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -51,7 +51,7 @@
         android:layout_marginTop="50dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="serif"
-        android:text="Confirmar"
+        android:text="@string/btn_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etTempoQuePensaFicar" />
