--- a/app/src/main/res/layout/activity_historico_reservas.xml
+++ b/app/src/main/res/layout/activity_historico_reservas.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="85dp"
         android:fontFamily="serif"
-        android:text="Histórico de Bilhetes"
+        android:text="@string/ticket_history"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,7 +36,7 @@
         android:layout_height="84dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="256dp"
-        android:text="NÃO TEM NENHUM BILHETE"
+        android:text="@string/no_tickets"
         android:textSize="28sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
